Refactor custom syntax classes to use info classes